--- a/css/buynow.css
+++ b/css/buynow.css
@@ -15,7 +15,7 @@ body {
     align-items: flex-start;
     min-height: 100vh;
     padding: 10px;
-    background-image: url("images\background.jpg"); 
+    background-image: url("../img/background.jpg"); 
     background-size: cover;           
     background-repeat: no-repeat;     
     background-position: center center; 
@@ -255,3 +255,4 @@ button:hover {
         width: 120px;
     }
 }
+
